--- a/package.json
+++ b/package.json
@@ -8,44 +8,44 @@
     "url": "https://github.com/thriveweb/yellowcake"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "dom-form-serializer": "^1.0.7",
-    "gatsby": "^2.17.7",
-    "gatsby-image": "^2.2.30",
-    "gatsby-plugin-google-tagmanager": "^2.1.15",
-    "gatsby-plugin-instagram-embed": "^1.1.0",
-    "gatsby-plugin-manifest": "^2.2.26",
-    "gatsby-plugin-netlify": "^2.1.23",
-    "gatsby-plugin-netlify-cms": "^4.1.26",
-    "gatsby-plugin-nprogress": "^2.1.12",
-    "gatsby-plugin-offline": "^3.0.17",
-    "gatsby-plugin-postcss": "^2.1.13",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sass": "^2.1.20",
-    "gatsby-plugin-sharp": "^2.2.36",
-    "gatsby-plugin-sitemap": "^2.2.19",
-    "gatsby-remark-images": "^3.1.28",
-    "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-remark-responsive-iframe": "^2.2.25",
-    "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-source-instagram": "^0.7.0",
-    "gatsby-transformer-remark": "^2.6.32",
-    "gatsby-transformer-sharp": "^2.3.2",
-    "gatsby-transformer-yaml": "^2.2.15",
-    "google-map-react": "^1.1.6",
-    "lodash": "^4.17.15",
-    "lodash.clonedeep": "^4.5.0",
-    "modern-normalize": "^0.5.0",
-    "netlify-cms-app": "^2.9.7",
-    "node-sass": "^4.13.0",
-    "postcss-preset-env": "^6.7.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-feather": "^2.0.3",
-    "react-helmet": "^5.2.1",
-    "react-markdown": "^4.2.2",
-    "react-photoswipe": "^1.3.0",
+    "@reach/router": "^1.3.3",
+    "dom-form-serializer": "*",
+    "gatsby": "^2.19.48",
+    "gatsby-image": "^2.2.45",
+    "gatsby-plugin-google-tagmanager": "^2.1.27",
+    "gatsby-plugin-instagram-embed": "*",
+    "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-netlify": "^2.1.35",
+    "gatsby-plugin-netlify-cms": "^4.1.43",
+    "gatsby-plugin-nprogress": "^2.1.21",
+    "gatsby-plugin-offline": "^3.0.42",
+    "gatsby-plugin-postcss": "^2.1.22",
+    "gatsby-plugin-react-helmet": "^3.1.24",
+    "gatsby-plugin-sass": "^2.1.31",
+    "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-sitemap": "^2.2.30",
+    "gatsby-remark-images": "^3.1.50",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-remark-responsive-iframe": "^2.2.34",
+    "gatsby-source-filesystem": "^2.1.57",
+    "gatsby-source-instagram": "*",
+    "gatsby-transformer-remark": "^2.6.59",
+    "gatsby-transformer-sharp": "^2.3.19",
+    "gatsby-transformer-yaml": "^2.2.27",
+    "google-map-react": "^1.1.7",
+    "lodash": "*",
+    "lodash.clonedeep": "*",
+    "modern-normalize": "^0.6.0",
+    "netlify-cms-app": "^2.11.29",
+    "node-sass": "*",
+    "postcss-preset-env": "*",
+    "prop-types": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-feather": "*",
+    "react-helmet": "*",
+    "react-markdown": "*",
+    "react-photoswipe": "*",
     "sharp": "^0.25.1"
   },
   "keywords": [
